--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,21 +7,19 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_home"/>
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Profile" />
-
+            android:title="Profile"/>
         <item
             android:id="@+id/nav_new_release"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="New Release" />
+            android:title="New Release"/>
 
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_payment"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Payment Methods" />
-
+            android:title="Payment Methods"/>
     </group>
 </menu>
