--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,16 +12,16 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.jukebox.world.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_profile"
+        android:name="com.jukebox.world.ui.profile.UserProfileFragment"
+        android:label="@string/menu_profile"
+        tools:layout="@layout/fragment_user_profile" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.jukebox.world.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_new_release"
+        android:name="com.jukebox.world.ui.newrelease.NewReleaseFragment"
+        android:label="@string/menu_new_release"
+        tools:layout="@layout/fragment_new_release" />
 
 
 </navigation>
