--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="list_item_height">120dp</dimen>
     <dimen name="title_margin_bottom">10dp</dimen>
     <dimen name="desc_margin_bottom">30dp</dimen>
+
+    <dimen name="logo_w_h">100dp</dimen>
 </resources>
