--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,14 +7,21 @@
     tools:context=".ui.home.HomeFragment"
     android:layout_margin="10dp">
 
+    <ViewFlipper
+        android:id="@+id/viewFlipper_ads_show"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true" />
+
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:layout_margin="16dp"
         android:id="@+id/rvCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <ScrollView
-        android:layout_below="@+id/rvCategory"
+        android:layout_below="@+id/viewFlipper_ads_show"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -40,7 +47,14 @@
                     android:textStyle="bold"
                     android:textSize="12sp"/>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_below="@id/artists_list"
+                    android:id="@+id/home_artists_recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
                 <HorizontalScrollView
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/artists_list"
@@ -99,7 +113,14 @@
                     android:textStyle="bold"
                     android:textSize="12sp"/>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_below="@id/albums_list"
+                    android:id="@+id/home_albums_recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
                 <HorizontalScrollView
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/albums_list"
