--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,20 +6,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/home"
             android:title="@string/menu_home"/>
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/profile"
             android:title="Profile"/>
         <item
             android:id="@+id/nav_new_release"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/music"
             android:title="New Release"/>
 
         <item
             android:id="@+id/nav_payment"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/payment"
             android:title="Payment Methods"/>
     </group>
 </menu>
