--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:title="Search"
         android:id="@+id/action_search"
         android:icon="@drawable/baseline_search_24"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.widget.SearchView"/>
+
+    <item
+        android:id="@+id/action_ads"
+        android:orderInCategory="100"
+        android:title="Ads"
+        app:showAsAction="never"/>
+
 </menu>
