--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -15,4 +15,10 @@
         android:title="Ads"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="Log Out"
+        app:showAsAction="never"/>
+
 </menu>
