--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,7 +18,7 @@
             android:title="New Release"/>
 
         <item
-            android:id="@+id/nav_payment"
+            android:id="@+id/nav_banking_details"
             android:icon="@drawable/payment"
             android:title="Payment Methods"/>
     </group>
