--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,19 +7,18 @@
     android:background="@drawable/walpaper"
     tools:context=".SignInActivity">
 
-    <TextView
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/textView"
+        android:layout_gravity="center"
+        android:src="@mipmap/ic_launcher_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/aclonica"
-        android:text="@string/app_name"
-        android:textColor="#FFEB3B"
-        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19" />
+        app:layout_constraintVertical_bias="0.19"/>
 
     <TextView
         android:id="@+id/textView2"
