--- a/app/src/main/res/layout/albums_cardview.xml
+++ b/app/src/main/res/layout/albums_cardview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
@@ -27,4 +27,4 @@
             android:textSize="15sp"
             android:textStyle="italic" />
 
-</LinearLayout>
+</FrameLayout>
