--- a/app/src/main/res/layout/tracks_cardview.xml
+++ b/app/src/main/res/layout/tracks_cardview.xml
@@ -29,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#880E4F" />
+                android:scaleType="fitXY"/>
 
             <TextView
                 android:id="@+id/tvTrackTitle"
