--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,5 +23,11 @@
         android:label="@string/menu_new_release"
         tools:layout="@layout/fragment_new_release" />
 
+    <fragment
+        android:id="@+id/nav_banking_details"
+        android:name="com.jukebox.world.ui.bankDetails.BankingDetailsFragment"
+        android:label="@string/menu_bank_details"
+        tools:layout="@layout/fragment_banking_details" />
+
 
 </navigation>
