--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/walpaper"
+    android:background="#000"
     android:fitsSystemWindows="true"
     tools:context=".ResetPasswordActivity">
 
@@ -29,6 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/aclonica"
+            android:textColor="#F7F7F8"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
             android:textSize="20dp" />
@@ -37,6 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/aclonica"
+            android:textColor="#F7F7F8"
             android:gravity="center_horizontal"
             android:padding="@dimen/activity_horizontal_margin"
             android:text="@string/forgot_password_msg"
@@ -64,14 +68,13 @@
         <!-- Login Button -->
 
         <Button
+            android:background="#FFEB3B"
             android:id="@+id/btn_reset_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            app:fontFamily="@font/josefinslabbold"
-            android:background="@drawable/roundbutton"
-            android:text="@string/btn_reset_password"
-            android:textColor="@color/colorTransparentWhite"  />
+            android:fontFamily="@font/aclonica"
+            android:text="@string/btn_reset_password"/>
 
         <Button
             android:id="@+id/btn_back"
@@ -81,7 +84,7 @@
             android:background="@null"
             android:text="@string/btn_back"
             android:textColor="@color/colorPink"
-            app:fontFamily="@font/josefinslabbold" />
+            android:fontFamily="@font/aclonica" />
 
     </LinearLayout>
 
