--- a/app/src/main/res/layout/activity_admin_registration.xml
+++ b/app/src/main/res/layout/activity_admin_registration.xml
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context=".SignUpActivity">
+    tools:context=".AdminRegistrationActivity">
 
     <LinearLayout
-       android:layout_gravity="center_vertical"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/textView"
-            android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher_round"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_launcher_round" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/aclonica"
-            android:text="Create New Account"
+            android:text="Create New Admin Account"
             android:textColor="#F7F7F8"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/fullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/edittextbackground"
             android:ems="10"
@@ -56,15 +55,15 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:hint="Email"
             android:background="@drawable/edittextbackground"
+            android:ems="10"
             android:fontFamily="@font/aclonica"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
-            android:textSize="14sp"
-            android:inputType="textEmailAddress" />
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/password"
@@ -73,11 +72,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:hint="Password"
             android:background="@drawable/edittextbackground"
+            android:ems="10"
             android:fontFamily="@font/aclonica"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:padding="10dp"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
@@ -90,37 +89,25 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:inputType="textPhonetic"
-            android:hint="Phone"
             android:background="@drawable/edittextbackground"
+            android:ems="10"
             android:fontFamily="@font/aclonica"
+            android:hint="Phone"
+            android:inputType="textPhonetic"
             android:padding="10dp"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textSize="14sp" />
 
-        <CheckBox
-            android:text="You are an Artist ?"
-            android:textColor="#FFFFFF"
-            android:buttonTint="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            android:id="@+id/chkUserRole"
-            android:layout_width="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_height="wrap_content"/>
 
         <EditText
-            android:visibility="gone"
-            android:background="@drawable/edittextbackground"
             android:id="@+id/etStageName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:background="@drawable/edittextbackground"
             android:ems="10"
             android:fontFamily="@font/aclonica"
             android:hint="Stage Name"
@@ -128,28 +115,21 @@
             android:padding="10dp"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:visibility="gone" />
 
         <Button
-            android:background="#FFEB3B"
             android:id="@+id/registerBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:background="#FFEB3B"
             android:fontFamily="@font/aclonica"
-            android:text="Register"
+            android:text="ADD NEW ADMIN"
             android:textSize="13sp" />
 
-        <TextView
-            android:layout_gravity="center"
-            android:id="@+id/createText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Already Registered ? Login Here"
-            android:textColor="#FFEB3B"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
