--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,6 +31,6 @@
         <item
             android:id="@+id/nav_banking_details"
             android:icon="@drawable/payment"
-            android:title="Payment Methods"/>
+            android:title="Banking Details"/>
     </group>
 </menu>
